MigrationDestinationManager assigns incorrect timestamps while building multiple indexes

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.0.7, 4.1.7
    • Affects Version/s: 4.0.5, 4.1.6
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v4.0
    • Storage NYC 2018-12-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When MigrationDestinationManager is cloning a collection with multiple indexes, the index builds are not assigned timestamps that are correct from a rollback/recovery perspective. A more detailed explanation of this issue is given in the resolved tickets SERVER-35780 and SERVER-35070.

      This issue was discovered while working on SERVER-37643.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: