SERVER-38745 convert MigrationDestinationManager::cloneCollectionIndexesAndOptions() to use IndexCatalog::createIndexOnEmptyCollection()